required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Labeling enhancements: ability to repeat labels along a line/multiline (#3030)

- Modified STYLEITEM code to use the new way of rendering thick lines (#3025)

- Fixed template processor to respect layer order. (#2619)

- Add MS_DEBUGLEVEL and MS_ERRORFILE commandline switches for mapserv.c. 

- Exposed msMapOffsetExtent, msMapScaleExtent and msMapSetCenter methods in PHP/Mapscript (#2460)

- Removed ZEND_DEBUG define in PHP/Mapscript (#2717)

- Fixed PHP/Mapscript to support PHP 5.3 (#3065, #3066)

- remove -O optimization flags to configure script if configured
  with --enable-debug

- Fixed performance bottleneck when computing a polygon center of gravity for
  label point computation. (#3053)

- make WFS numberOfFeatures match maxFeatures if passed (#2907)

- Add logging in layer visibility tests to help users find why layers don't draw (#3054)

- include PNG libs first (#3046)

- merge graphics branch: RFC54 implementation, cairo rendering (png, svg, pdf),
  opengl rendering (non functionnal yet)

- Do pre-emptive test for map.extent/layer.extent interaction (#3043)

- Add centroid geomtransform (#2825)

- Test database connections before using them (#2932)

- Support non-numeric join criteria (#2006)

- Ensure there's enough room in the SQL to hold a long (#1284)

- Fix filter error in multi-clause filters (#2937)

- Fix agg freetype character lookup when no unicode charmap is present (#3018)

- Fix memory leak in SQL building (#2997)

- Fork AGG rendering library in our trunk

- Fixed a memory leak when unescaping quotes in	logical	expressions (#2938)
