@@ -1247,7 +1247,7 @@ int msDrawLabelCacheSVG(imageObj *image, mapObj *map)
           /* Compare against image bounds, rendered labels and markers (sets cachePtr->status) */
           msTestLabelCacheCollisions(&(map->labelcache), labelPtr, 
                                      map->width, map->height, 
-                                     label_buffer, cachePtr, priority, l, label_mindistance);
+                                     label_buffer, cachePtr, priority, l, label_mindistance, (r.maxx-r.minx));
 
 
 	  if(cachePtr->status) /* found a suitable place for this label */
@@ -1269,7 +1269,7 @@ int msDrawLabelCacheSVG(imageObj *image, mapObj *map)
           /* Compare against image bounds, rendered labels and markers (sets cachePtr->status) */
           msTestLabelCacheCollisions(&(map->labelcache), labelPtr, 
                                      map->width, map->height, 
-                                     label_buffer, cachePtr, priority, l, label_mindistance);
+                                     label_buffer, cachePtr, priority, l, label_mindistance, (r.maxx-r.minx));
 
 	  if(cachePtr->status) /* found a suitable place for this label */
 	    break;
@@ -1294,7 +1294,7 @@ int msDrawLabelCacheSVG(imageObj *image, mapObj *map)
         /* Compare against image bounds, rendered labels and markers (sets cachePtr->status) */
         msTestLabelCacheCollisions(&(map->labelcache), labelPtr, 
                                    map->width, map->height, 
-                                   label_buffer, cachePtr, priority, l, label_mindistance);
+                                   label_buffer, cachePtr, priority, l, label_mindistance, (r.maxx-r.minx));
       }
     } /* end position if-then-else */
 
