@@ -2675,7 +2675,7 @@ int msDrawLabelCacheSWF(imageObj *image, mapObj *map)
                     /* Compare against image bounds, rendered labels and markers (sets cachePtr->status) */
                     msTestLabelCacheCollisions(&(map->labelcache), labelPtr, 
                                                map->width, map->height, 
-                                               label_buffer, cachePtr, priority, l, label_mindistance);
+                                               label_buffer, cachePtr, priority, l, label_mindistance, (r.maxx-r.minx));
 
                     if(cachePtr->status) /* found a suitable place for this label */
                         break;
@@ -2696,7 +2696,7 @@ int msDrawLabelCacheSWF(imageObj *image, mapObj *map)
                     /* Compare against image bounds, rendered labels and markers (sets cachePtr->status) */
                     msTestLabelCacheCollisions(&(map->labelcache), labelPtr, 
                                                map->width, map->height, 
-                                               label_buffer, cachePtr, priority, l, label_mindistance);
+                                               label_buffer, cachePtr, priority, l, label_mindistance, (r.maxx-r.minx));
 
                     if(cachePtr->status) /* found a suitable place for this label */
                         break;
@@ -2722,7 +2722,7 @@ int msDrawLabelCacheSWF(imageObj *image, mapObj *map)
               /* Compare against image bounds, rendered labels and markers (sets cachePtr->status) */
                 msTestLabelCacheCollisions(&(map->labelcache), labelPtr, 
                                            map->width, map->height, 
-                                           label_buffer, cachePtr, priority, l, label_mindistance);
+                                           label_buffer, cachePtr, priority, l, label_mindistance, (r.maxx-r.minx));
             }
         } /* end position if-then-else */
 
